; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bnad.c_bnad_cb_tcb_setup.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/bna/extr_bnad.c_bnad_cb_tcb_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnad = type { i32 }
%struct.bna_tcb = type { i64, %struct.bna_tcb*, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.bnad_tx_info = type { %struct.bna_tcb** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnad*, %struct.bna_tcb*)* @bnad_cb_tcb_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnad_cb_tcb_setup(%struct.bnad* %0, %struct.bna_tcb* %1) #0 {
  %3 = alloca %struct.bnad*, align 8
  %4 = alloca %struct.bna_tcb*, align 8
  %5 = alloca %struct.bnad_tx_info*, align 8
  store %struct.bnad* %0, %struct.bnad** %3, align 8
  store %struct.bna_tcb* %1, %struct.bna_tcb** %4, align 8
  %6 = load %struct.bna_tcb*, %struct.bna_tcb** %4, align 8
  %7 = getelementptr inbounds %struct.bna_tcb, %struct.bna_tcb* %6, i32 0, i32 2
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to %struct.bnad_tx_info*
  store %struct.bnad_tx_info* %13, %struct.bnad_tx_info** %5, align 8
  %14 = load %struct.bna_tcb*, %struct.bna_tcb** %4, align 8
  %15 = load %struct.bna_tcb*, %struct.bna_tcb** %4, align 8
  %16 = getelementptr inbounds %struct.bna_tcb, %struct.bna_tcb* %15, i32 0, i32 1
  store %struct.bna_tcb* %14, %struct.bna_tcb** %16, align 8
  %17 = load %struct.bna_tcb*, %struct.bna_tcb** %4, align 8
  %18 = load %struct.bnad_tx_info*, %struct.bnad_tx_info** %5, align 8
  %19 = getelementptr inbounds %struct.bnad_tx_info, %struct.bnad_tx_info* %18, i32 0, i32 0
  %20 = load %struct.bna_tcb**, %struct.bna_tcb*** %19, align 8
  %21 = load %struct.bna_tcb*, %struct.bna_tcb** %4, align 8
  %22 = getelementptr inbounds %struct.bna_tcb, %struct.bna_tcb* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = getelementptr inbounds %struct.bna_tcb*, %struct.bna_tcb** %20, i64 %23
  store %struct.bna_tcb* %17, %struct.bna_tcb** %24, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
